fix(prompt): preserve null semantic params so missing slots stay detectable
DefaultSemanticValidator.parseParams dropped parameters whose extracted
value was null, so FilledParamData did not even carry the key. A null
param is the semantic validator's explicit signal that a schema slot is
missing from the content (per the content_validation user prompt: slots
that cannot be extracted must be output as null). With the key gone, any
caller that detects missing parameters by scanning FilledParamData for
blank values cannot see the missing slot, and negotiation is silently
never triggered for it.

The parse now keeps null-valued keys (the normalized map is wrapped with
Collections.unmodifiableMap instead of Map.copyOf, which rejects null
values), and ValidationPipeline.mergeParams already carries them through
unchanged.

Found by the negotiation interface closed-loop evaluator (eval-suite case
PLC-10: the LLM returned 任务对象=null with semantic_verdict=true, the
missing slot vanished from FilledParamData, and the negotiation flow
never started).

Signed-off-by: ZhouJie6 <ivo.zhou@huawei.com>